feat: implement seat-reservation-service with Redis locking
- Add Reservation model with ReservationStatus enum to Prisma schema
- Update Journey and Station models with reservation relations
- Create complete seat-reservation-service with NestJS
- Implement RedisService with atomic lock operations (acquire, check, extend, release)
- Implement LocksService with seat locking business logic
- Implement ReservationsService for confirmation and management
- Add comprehensive DTOs with validation and Swagger decorators
- Add cron job for automatic expired lock cleanup (runs every minute)
- Create Locks endpoints: acquire, check availability, extend, release
- Create Reservations endpoints: confirm, get, query by user, cancel
- Add Swagger documentation on port 3003
- Service includes 10-minute lock TTL with extension capability
- Prevent double-booking with Redis SET NX EX commands
- Support partial journey seat availability checking
- Apply database migration for Reservation table

--- a/apps/schedule-service/package.json
+++ b/apps/schedule-service/package.json
@@ -4,11 +4,11 @@
   "description": "Jatra Railway Schedule and Search Service",
   "main": "dist/main.js",
   "scripts": {
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
+    "start:debug": "ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only src/main.ts",
     "start:prod": "node dist/main",
-    "build": "nest build"
+    "build": "tsc"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
