--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "nx": "22.0.3",
     "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.20.6"
   }
 }
