--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -15,24 +15,24 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.20",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.20",
     "@nestjs/platform-express": "^10.4.20",
     "@nestjs/swagger": "^7.4.2",
-    "@nestjs/config": "^3.3.0",
     "@prisma/client": "^6.19.0",
-    "class-validator": "^0.14.2",
     "class-transformer": "^0.5.1",
-    "uuid": "^9.0.1",
+    "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.10.2",
-    "@types/uuid": "^9.0.7",
-    "typescript": "^5.9.3",
+    "@types/uuid": "^9.0.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3"
   }
 }
