--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/axios": "3.1.2",
     "@nestjs/common": "^10.4.20",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.20",
     "@nestjs/platform-express": "^10.4.20",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^6.19.0",
+    "@types/amqplib": "0.10.6",
+    "amqplib": "0.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "empty": "0.10.1",
