fix: improve notification-service SMTP error handling and add comprehensive README
- Make SMTP configuration optional - service won't crash if not configured
- Add graceful degradation: notifications saved to DB even without SMTP
- Add clear warning messages when SMTP is disabled
- Update .env to leave SMTP credentials empty by default
- Improve error messages with emoji indicators for better visibility
- Add comprehensive README with:
  - RabbitMQ Management UI access (localhost:15672)
  - Gmail App Password setup instructions
  - Alternative SMTP providers (SendGrid, AWS SES)
  - API documentation and examples
  - Troubleshooting guide
  - Architecture diagram
  - Best practices for production

Best practices implemented:
- Service continues running even with SMTP failures
- Failed notifications tracked in database for later retry
- Environment-based configuration with sensible defaults
- Clear logging with structured error messages
- Async email sending with retry mechanism
- Template caching for performance

--- a/apps/notification-service/.env
+++ b/apps/notification-service/.env
@@ -6,16 +6,17 @@ NODE_ENV=development
 DATABASE_URL="postgresql://jatra_user:jatra_password@localhost:5432/jatra_db?schema=public"
 
 # RabbitMQ Configuration
-RABBITMQ_URL=amqp://localhost:5672
+RABBITMQ_URL=amqp://jatra_user:jatra_password@localhost:5672/jatra
 RABBITMQ_EXCHANGE=notifications
 RABBITMQ_QUEUE=notification_queue
 
-# SMTP Configuration (Gmail example)
+# SMTP Configuration (Optional - leave empty to disable email sending)
+# For Gmail: Enable 2FA and create an App Password at https://myaccount.google.com/apppasswords
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
+SMTP_USER=
+SMTP_PASS=
 SMTP_FROM=Jatra Railway <noreply@jatrarailway.com>
 
 # Retry Configuration
