--- a/apps/notification-service/.env.example
+++ b/apps/notification-service/.env.example
@@ -10,13 +10,14 @@ RABBITMQ_URL=amqp://localhost:5672
 RABBITMQ_NOTIFICATION_EXCHANGE=notifications
 RABBITMQ_NOTIFICATION_QUEUE=notification_queue
 
-# Email Configuration (Gmail Example)
+# Email Configuration (Optional - leave SMTP_USER and SMTP_PASS empty to disable email sending)
+# For Gmail: Enable 2FA and create an App Password at https://myaccount.google.com/apppasswords
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_SECURE=false
-SMTP_USER=your-email@gmail.com
-SMTP_PASSWORD=your-app-password
-EMAIL_FROM=Jatra Railway <noreply@jatra-railway.com>
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=Jatra Railway <noreply@jatra-railway.com>
 
 # Retry Configuration
 MAX_RETRY_ATTEMPTS=3
