--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ node_modules
 !.vscode/launch.json
 !.vscode/extensions.json
 
+# Sensitive documentation and AI context files
+AI_CONTEXT.md
+PROJECT_CONTEXT.md
+PROJECT_REQUIREMENTS.md
+ARCHITECTURE.md
+
 # misc
 /.sass-cache
 /connect.lock
