add search service with redis caching
implemented journey search with proper caching layer. handles route
autocomplete, popular routes tracking, and search analytics. fixed
redis auth by switching to url-based connection string.

endpoints:
- search journeys with filters
- station autocomplete
- popular routes
- cache management
- search analytics

tested and working on port 3009

--- a/apps/search-service/.env
+++ b/apps/search-service/.env
@@ -8,8 +8,8 @@ DATABASE_URL=postgresql://jatra_user:jatra_password@localhost:5432/jatra_db
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DB=0
+REDIS_PASSWORD=jatra_redis_pass
+REDIS_DB=1
 
 # Cache TTL (in seconds)
 CACHE_TTL_POPULAR_ROUTES=3600
