--- a/apps/search-service/package.json
+++ b/apps/search-service/package.json
@@ -4,45 +4,32 @@
   "description": "Search Service with Redis Caching for Jatra Railway",
   "main": "dist/main.js",
   "scripts": {
-    "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start": "ts-node -r tsconfig-paths/register src/main.ts",
+    "start:dev": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only src/main.ts",
+    "start:debug": "ts-node-dev -r tsconfig-paths/register --inspect --respawn --transpile-only src/main.ts",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "build": "tsc"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.20",
-    "@nestjs/core": "^10.4.20",
-    "@nestjs/platform-express": "^10.4.20",
-    "@nestjs/swagger": "^8.0.7",
-    "@nestjs/config": "^3.3.0",
-    "@prisma/client": "^6.1.0",
-    "class-validator": "^0.14.1",
+    "@nestjs/common": "^10.3.0",
+    "@nestjs/core": "^10.3.0",
+    "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/config": "^3.1.1",
+    "@nestjs/swagger": "^7.1.17",
+    "@prisma/client": "^7.0.0",
+    "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
-    "redis": "^4.7.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.4.20",
-    "@nestjs/schematics": "^10.1.4",
-    "@nestjs/testing": "^10.4.20",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.10.2",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
-    "eslint": "^9.17.0",
-    "jest": "^29.7.0",
-    "prettier": "^3.4.2",
-    "ts-jest": "^29.2.5",
-    "ts-loader": "^9.5.1",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@types/node": "^20.10.5",
+    "typescript": "^5.3.3",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.7.2"
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0"
   },
   "jest": {
     "moduleFileExtensions": ["js", "json", "ts"],
