--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.20",
     "@nestjs/platform-express": "^10.4.20",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^6.19.0",
     "@types/amqplib": "0.10.6",
@@ -26,6 +27,7 @@
     "empty": "0.10.1",
     "handlebars": "4.7.8",
     "nodemailer": "6.9.16",
+    "redis": "^5.10.0",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.2"
   },
@@ -38,7 +40,7 @@
     "@nx/react": "^22.0.3",
     "@nx/webpack": "^22.0.3",
     "@nx/workspace": "22.0.3",
-    "@types/node": "^24.10.1",
+    "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
     "eslint-config-prettier": "^10.1.8",
