--- a/apps/reporting-service/.env
+++ b/apps/reporting-service/.env
@@ -1,3 +1,3 @@
 PORT=3011
-DATABASE_URL="postgresql://jatra_user:jatra_secure_password_2024@localhost:5432/jatra_db?schema=public"
+DATABASE_URL="postgresql://jatra_user:jatra_password@localhost:5432/jatra_db?schema=public"
 NODE_ENV=development
