feat(notification): Add SMS provider abstraction (Twilio/Mock)

--- a/apps/notification-service/.env.example
+++ b/apps/notification-service/.env.example
@@ -30,3 +30,18 @@ SMTP_FROM=Jatra Railway <noreply@your-domain.mailgun.org>
 # Retry Configuration
 MAX_RETRY_ATTEMPTS=3
 RETRY_DELAY_MS=5000
+
+# SMS Provider Configuration
+# SMS_PROVIDER: TWILIO (production) or MOCK (development/testing)
+SMS_PROVIDER=MOCK
+
+# Twilio SMS Configuration:
+# 1. Sign up at https://twilio.com (Trial: $15.50 credit, ~1,900 free SMS)
+# 2. Get credentials from: Console > Account Info
+# 3. Get phone number from: Phone Numbers > Manage > Active Numbers
+# TWILIO_ACCOUNT_SID: Account SID from dashboard
+# TWILIO_AUTH_TOKEN: Auth Token from dashboard
+# TWILIO_FROM_NUMBER: Your Twilio phone number (format: +1234567890)
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_FROM_NUMBER=
