--- a/apps/notification-service/.env
+++ b/apps/notification-service/.env
@@ -10,15 +10,30 @@ RABBITMQ_URL=amqp://jatra_user:jatra_password@localhost:5672/jatra
 RABBITMQ_EXCHANGE=notifications
 RABBITMQ_QUEUE=notification_queue
 
-# SMTP Configuration (Optional - leave empty to disable email sending)
-# For Gmail: Enable 2FA and create an App Password at https://myaccount.google.com/apppasswords
-SMTP_HOST=smtp.gmail.com
+# Email Provider Configuration
+# EMAIL_PROVIDER: MAILGUN (production) or MOCK (development/testing)
+EMAIL_PROVIDER=MOCK
+
+# SMTP Configuration (Required only for MAILGUN provider)
+# Mailgun SMTP - See MAILGUN_SETUP.md for setup instructions
+# Get credentials from: https://app.mailgun.com > Sending > Domain Settings > SMTP credentials
+SMTP_HOST=smtp.mailgun.org
 SMTP_PORT=587
 SMTP_SECURE=false
 SMTP_USER=
 SMTP_PASS=
-SMTP_FROM=Jatra Railway <noreply@jatrarailway.com>
+SMTP_FROM=Jatra Railway <noreply@your-domain.mailgun.org>
 
 # Retry Configuration
 MAX_RETRY_ATTEMPTS=3
 RETRY_DELAY_MS=5000
+
+# SMS Provider Configuration
+# SMS_PROVIDER: TWILIO (production) or MOCK (development/testing)
+SMS_PROVIDER=MOCK
+
+# Twilio SMS Configuration (Required only for TWILIO provider)
+# Get credentials from: https://console.twilio.com
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_FROM_NUMBER=
