--- a/apps/notification-service/package.json
+++ b/apps/notification-service/package.json
@@ -10,27 +10,28 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.20",
-    "@nestjs/core": "^10.4.20",
     "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.20",
+    "@nestjs/microservices": "^10.4.20",
     "@nestjs/platform-express": "^10.4.20",
     "@nestjs/swagger": "^7.4.2",
-    "@nestjs/microservices": "^10.4.20",
     "@prisma/client": "^6.19.0",
-    "class-validator": "^0.14.2",
-    "class-transformer": "^0.5.1",
     "amqplib": "^0.10.4",
-    "nodemailer": "^6.9.16",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "handlebars": "^4.7.8",
+    "nodemailer": "^6.9.16",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
-    "@types/node": "^22.10.0",
-    "@types/express": "^5.0.0",
     "@types/amqplib": "^0.10.6",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.0",
     "@types/nodemailer": "^6.4.17",
-    "typescript": "^5.9.3",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3"
   }
 }
