feat(kubernetes): optimize Docker images and prepare K8s deployment
- Optimized all 11 NestJS services from 1.41GB to ~430MB avg (70% reduction)
- Built API Gateway (Go) at 30.5MB
- Fixed TypeScript errors across services (Redis types, Prisma includes, QRCode)
- Added missing tsconfig paths for monorepo imports
- Updated API Gateway Dockerfile to Go 1.24
- Cleaned up build artifacts and log files
- Ready for Kubernetes deployment to Minikube

Services built:
- api-gateway: 30.5MB
- auth-service: 428MB
- schedule-service: 427MB
- seat-reservation-service: 431MB
- payment-service: 431MB
- booking-service: 430MB
- ticket-service: 449MB
- notification-service: 442MB
- user-service: 427MB
- search-service: 428MB
- admin-service: 427MB
- reporting-service: 427MB

--- a/apps/api-gateway/Dockerfile
+++ b/apps/api-gateway/Dockerfile
@@ -1,16 +1,16 @@
 # Stage 1: Build
-FROM golang:1.21-alpine AS builder
+FROM golang:1.24-alpine AS builder
 
 WORKDIR /app
 
-# Copy go mod files
-COPY go.mod go.sum* ./
+# Copy go mod files from api-gateway directory
+COPY apps/api-gateway/go.mod apps/api-gateway/go.sum* ./
 
 # Download dependencies
 RUN go mod download
 
-# Copy source code
-COPY . .
+# Copy source code from api-gateway directory
+COPY apps/api-gateway ./
 
 # Build the application
 RUN CGO_ENABLED=0 GOOS=linux go build -o api-gateway .
