--- a/apps/reporting-service/package.json
+++ b/apps/reporting-service/package.json
@@ -14,7 +14,7 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.1.16",
     "@nestjs/config": "^3.1.1",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^6.19.0",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
@@ -24,6 +24,7 @@
     "@types/node": "^20.10.6",
     "typescript": "^5.3.3",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "prisma": "^6.19.0"
   }
 }
