--- a/apps/search-service/package.json
+++ b/apps/search-service/package.json
@@ -16,7 +16,7 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/swagger": "^7.1.17",
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "^6.19.0",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
@@ -32,13 +32,19 @@
     "tsconfig-paths": "^4.2.0"
   },
   "jest": {
-    "moduleFileExtensions": ["js", "json", "ts"],
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": ["**/*.(t|j)s"],
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
