--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -16,7 +16,7 @@
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/swagger": "^7.1.16",
-    "@prisma/client": "^5.7.1",
+    "@prisma/client": "^6.19.0",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.1.13",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "prisma": "^6.19.0"
   }
 }
