--- a/apps/auth-service/package.json
+++ b/apps/auth-service/package.json
@@ -18,6 +18,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.1.17",
+    "@prisma/client": "^6.19.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -38,6 +39,7 @@
     "@types/node": "^20.10.0",
     "@types/passport-jwt": "^4.0.0",
     "@types/passport-local": "^1.0.38",
+    "prisma": "^6.19.0",
     "typescript": "^5.3.3"
   }
 }
