debug: add pwd and ls to Deploy Infrastructure stage

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -133,6 +133,8 @@ pipeline {
                 script {
                     echo "🏗️  Deploying infrastructure components..."
                     sh '''
+                        pwd
+                        ls -la | head -20
                         export KUBECONFIG=${KUBECONFIG}
                         
                         # Create namespace if not exists
