fix: update pgbouncer password to match secrets
- Changed pgbouncer userlist password from 'jatra_password' to 'jatra_password_change_in_prod'
- This fixes database authentication errors for all services
- All microservices now connecting successfully via pgbouncer

--- a/infra/kubernetes/deployments/pgbouncer.yaml
+++ b/infra/kubernetes/deployments/pgbouncer.yaml
@@ -54,7 +54,7 @@ data:
     listen_backlog = 128
 
   userlist.txt: |
-    "jatra_user" "jatra_password"
+    "jatra_user" "jatra_password_change_in_prod"
 
 ---
 apiVersion: v1
