feat(web): add quick login role selector & format fixes
- Click Admin/User buttons to auto-fill test credentials
- Visual role icons (Shield for Admin, User for Regular)
- Auto-formatting applied to components

--- a/apps/booking-service/.env
+++ b/apps/booking-service/.env
@@ -12,7 +12,7 @@ SEAT_RESERVATION_SERVICE_URL=http://localhost:3003
 PAYMENT_SERVICE_URL=http://localhost:3004
 
 # RabbitMQ Configuration
-RABBITMQ_URL=amqp://localhost:5672
+RABBITMQ_URL=amqp://jatra_user:jatra_password@localhost:5672/jatra
 RABBITMQ_BOOKING_QUEUE=booking_events
 RABBITMQ_NOTIFICATION_EXCHANGE=notifications
 
