--- a/apps/ticket-service/.env
+++ b/apps/ticket-service/.env
@@ -5,6 +5,9 @@ NODE_ENV=development
 # Database
 DATABASE_URL="postgresql://jatra_user:jatra_password@localhost:5432/jatra_db?schema=public"
 
+# RabbitMQ
+RABBITMQ_URL="amqp://jatra_user:jatra_password@localhost:5672/jatra"
+
 # File Storage
 TICKET_PDF_STORAGE_PATH=./storage/tickets
 TICKET_PDF_URL_BASE=http://localhost:3006/tickets
